--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,14 @@
-/* CSS for h1 */
 h1 {
-    animation: rainbow 5s infinite;
+  max-width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  animation: rainbow 5s infinite;
+}
+
+pre {
+  max-width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @keyframes rainbow {
